Fri May 25 00:52:35 2001  George Lebl <jirka@5z.com>

	* Makefile.am, conditional.[ch], gnome-panel-properties.c, session.c,
	  menu.c:  Support a "Conditional" key on panel, tearoff menu and
	  applet definitions and implement an conditional key getting if the
	  normal key doesn't work.  The conditions are a fairly full featured
	  C like conditions with currently not too many possible values.
	  This is the first step in making the default config be not
	  hardcoded.

Tue May 22 20:08:06 2001  George Lebl <jirka@5z.com>

	* main.c: fish get scared if you click at them and I hate studying
	  for finals

Tue May 22 01:15:26 2001  George Lebl <jirka@5z.com>

	* gnome-run.c, menu.c, panel_config.c: multiscreen polishing and
	  fixes

Sun May 20 01:31:57 2001  George Lebl <jirka@5z.com>

	* menu.c: include math.h before gnome.h, patch from
	  mcnichol@austin.ibm.com (Dan McNichol) to make it compile on
	  some IBM compiler thingie

Sun May 20 00:26:47 2001  George Lebl <jirka@5z.com>

	* applet.c, menu.[ch], foobar-widget.c, scroll-menu.c:  Display menus
	  on their respective screens

	* basep-widget.c, xstuff.c: Fix border recalculation and the root
	  property setting

	* sliding-widget.c: Fix moving on offset screens

	* panel-util.c: when finding things in path, use access with X_OK
	  rather then the exists function which uses F_OK

Sat May 19 18:49:00 2001  George Lebl <jirka@5z.com>

	* multiscreen-stuff.c: fix dranbamage from cut and paste

Sat May 19 16:56:43 2001  George Lebl <jirka@5z.com>

	* aligned-widget.c, foobar-widget.c, basep-widget.[ch], session.c,
	  xstuff.[ch], edge-widget.c, multiscreen-stuff.c:  do the screen
	  border calculation and finally add the xinerama code, and
	  other final multiscreen touches.  So by default now xinerama dudes
	  get a multiscreen setup.

Sat May 19 02:17:18 2001  George Lebl <jirka@5z.com>

	* menu.c: create panels on the proper screen

	* session.c: sanitize screen
