@@ -1,3 +1,7 @@
+Fri May 25 14:36:29 2001  George Lebl <jirka@5z.com>
+
+	* foobar-widget.c: don't use the global for the clock_ebox
+
 Fri May 25 00:52:35 2001  George Lebl <jirka@5z.com>
 
 	* Makefile.am, conditional.[ch], gnome-panel-properties.c, session.c,
